# autodiff

./: .gitignore  .travis.yml  README.md  setup.cfg
.github/workflows/: workflow.yml
autodiff/: __init__.py
autodiff/src/forward/: dual.py  operations.py
autodiff/tests/: run_tests.sh  test_dual.py  test_operations.py
docs/: README.md  documentation.ipynb  milestone1.ipynb  milestone2.ipynb  milestone2_progress.ipynb
docs/sphinx/: conf.py  index.rst
docs/sphinx/_templates/autosummary/: class.rst  sidebar-nav-bs.html
docs/sphinx/forward/: dual.rst  elementary_functions.rst  index.rst
docs/sphinx/reverse/: index.rst  node.rst  reverse_elementary_functions.rst
src/autodiff/: __init__.py
src/autodiff/forward/: __init__.py  dual.py  operations.py
src/autodiff/reverse/: __init__.py  node.py  operations.py
tests/: run_tests.sh  test_dual.py  test_forward.py  test_node.py  test_operations.py  test_reverse.py  test_reverse_operations.py  utils.py
