[metadata]
name = autodiff
version = 0.0.0
author = "Xuliang Guo, Kamran Ahmed, Van Anh Le, Hanwen Cui"
description = An automatic differentiation package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-XKVH/cs107-FinalProject
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = autodiff
packages = find:
python_requires = >=3.8
install_requires =
    numpy >=1.21.4

[options.packages.find]
where = autodiff